<?xml version="1.0" encoding="utf-8"?>

<!-- Scrollview for app usage on smaller displays -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        tools:context=".MainActivity">

        <!-- Displays subject of the quiz, details, and takes user name input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/quiz_subject"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/quiz_detail"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_name"
            android:inputType="textCapWords" />

        <!---quiz question headers, question text, and answers for each question -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/header_question_1"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_1"
            android:textSize="15sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <RadioGroup
                android:id="@+id/q1answers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question1_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/q1_a1"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/question1_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a2"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/question1_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1_a3"
                    android:textSize="12sp" />
            </RadioGroup>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/header_question_2"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_2"
            android:textSize="15sp" />

        <!-- User input for this question should always be numeric and no other characters -->

        <EditText
            android:id="@+id/question2_a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/q2_a1"
            android:inputType="number"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/header_question_3"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_3"
            android:textSize="15sp" />

        <RadioGroup
            android:id="@+id/q3answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/question3_a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/q3_a1"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/question3_a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a2"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/question3_a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3_a3"
                android:textSize="12sp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/header_question_4"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question_4"
            android:textSize="15sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <CheckBox
                    android:id="@+id/question4_a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a1"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/question4_a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4_a2"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <CheckBox
                    android:id="@+id/question4_a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/q4_a3"
                    android:textSize="16sp" />

                <CheckBox
                    android:id="@+id/question4_a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/q4_a4"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>

        <!-- Answer submission button -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="checkAnswers"
            android:text="@string/submit_answers"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>